--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,6 +1,9 @@
 html {
   scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
+  -webkit-user-select: none; /* Safari */ /* IE 10 and IE 11 */
+  -moz-user-select: none;
+       user-select: none; /* Standard syntax */
 }
 
 * {
@@ -13,6 +16,7 @@ html {
 body {
   background-color: #0c0c1d;
   color: lightgray;
+  cursor: none; /* Hide default cursor */
 }
 
 a {
@@ -22,7 +26,6 @@ a {
 
 section {
   height: 100vh;
-  width: 100vw;
   scroll-snap-align: center;
   overflow: hidden;
 }
@@ -131,4 +134,5 @@ section {
   padding: 10px;
   width: 200px;
   cursor: pointer;
+  z-index: 999;
 }/*# sourceMappingURL=portfolio.css.map */
