--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -49,6 +49,7 @@ section {
     align-self: center;
     text-align: center;
     flex-direction: column;
+    margin-top: -50px;
   }
 }
 .services .textContainer p {
@@ -56,6 +57,7 @@ section {
   font-size: 20px;
   color: gray;
   text-align: right;
+  display: none;
 }
 .services .textContainer hr {
   width: 500px;
@@ -156,7 +158,12 @@ section {
   }
 }
 @media (max-width: 738px) {
+  .services .listContainer .box h2 {
+    font-size: 18px;
+  }
+}
+@media (max-width: 738px) {
   .services .listContainer .box p {
-    display: none;
+    font-size: 14px;
   }
 }/*# sourceMappingURL=services.css.map */
